@@ -55,6 +55,11 @@ sub new
     my $class = ref($proto) || $proto;
     $options{'-WriteAccess'} = 1;
     my $self  = $class->SUPER::new( %options );
+    if( not defined( $self ) )
+    {
+        return undef;
+    }
+    
     bless $self, $class;
 
     $self->{'viewparent'} = {};
